# vitseg

./: .gitignore  CLAUDE.md  COLOR_SYSTEM_README.md  README.md  UNIFORM_TILING_README.md  VIT_IMPROVEMENTS_README.md  analyze_vit_improvements.py  ben_code.py  changes_made_short.md  cluster_uniform_tiles_memopt.py  cluster_vit_patches.py  cluster_vit_patches_memopt.py  color_config.py  compare_improvements.py  crop.py  demo_enhanced_colors.py  enhanced_cluster_vit_patches.py  environment.yml  example_color_config.json  filter_masks.py  filter_masks_memopt.py  generate_contrast_colors.py  new.py  original_vit_template.py  overlay_masks.py  patch_clusterer.py  pipeline.sh  pyproject.toml  requirements.txt  segmentation_mask_bbox_patches_vit.py  segmentation_mask_dynamic_patches_vit.py  segmentation_mask_to_binary_vit_input.py  segmentation_masks.npy  setup_venv310.py  test_anndata.py  test_color_improvements.py  test_data_check.py  test_enhanced_colors.py  test_overlay_masks.py  test_overlay_memory_fix.py  (+6 more)
.claude/: settings.json
archive/: compare_improvements.py  comparison_analysis_README.md  test_spot_nuclei_coordinates.py  verify_color_consistency.py
code/: __init__.py  analyze_vit_improvements.py  assess_vit_quality.py  cluster_spots_by_nuclei_features.py  cluster_uniform_tiles_memopt.py  cluster_vit_patches_memopt.py  color_config.py  compare_improvements.py  crop.py  demo_enhanced_colors.py  enhanced_cluster_vit_patches.py  filter_features_by_box_size.py  filter_masks.py  filter_masks_memopt.py  generate_contrast_colors.py  overlay_masks.py  prepare_vit_data_for_verification.py  (+9 more)
(+83 files in other folders)
